<resources>
    <string name="app_name">FarmApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="farmer_sign_up">Farmer Sign up</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="password">Password</string>
    <string name="farm_app">Farm App</string>
    <string name="back">Back</string>
    <string name="previous">Previous</string>
    <string name="submit">Submit</string>
    <string name="first_name">First name</string>
    <string name="city">City</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="surname">Surname</string>
    <string name="location_1">location 1</string>
    <string name="farmers_name_wph">%s %s</string>
    <string name="win_percentage">%.2f%%</string>
    <string name="farm_name">Farm name</string>
    <string name="submit_update">Submit update</string>
    <string name="farmers">Farmers</string>
</resources>